fix dark mode issues

--- a/app/src/scss/global.scss
+++ b/app/src/scss/global.scss
@@ -96,4 +96,8 @@
     // background: #363636 !important;
     filter: invert(1);
   }
+  .leaflet-control-mouseposition, .leaflet-control-attribution {
+    background: #363636 !important;
+    color: white !important;
+  }
 }
